# Financial_Tracker_v2

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  setup_dev.py
src/: __init__.py  config.py
src/models/: __init__.py  account.py  base.py  stock.py  transaction.py  user_settings.py
src/services/: __init__.py  account_service.py  financial_data.py  stock_service.py  transaction_service.py
src/static/css/: main.css  tables.css  themes.css
src/static/js/: main.js  table-sort.js
src/templates/: base.html  dashboard.html
src/templates/accounts/: detail.html  form.html  list.html
src/templates/errors/: 404.html  500.html
src/templates/settings/: about.html  form.html  import.html  view.html
src/templates/stocks/: add.html  detail.html  list.html  transaction_form.html
src/templates/transactions/: detail.html  form.html  import.html  list.html
src/web/: app.py
src/web/routes/: __init__.py  accounts.py  main.py  settings.py  stocks.py  transactions.py
tests/: conftest.py  test_account_service.py  test_integration.py  test_stock_pages.py  test_stock_service.py  test_transaction_service.py  test_ui.py
